base/src/test/resources/failure/struct/arg-num-mismatch.aya.txt
In file $FILE:9:5 ->

  7 | 
  8 | def path {A : I -> Type} (p : Pi (i : I) -> A i)
  9 |   => new Path A (p 0) (p 1) { | at i j => p i}
           ^---------------------------------------^

Error: Expected 1 arguments, but found 2 arguments for field at

1 error(s), 0 warning(s).
What are you doing?
